Bug 566260 - text accessibles shouldn't implement nsIAccessibleHyperLink, r=davidb, marcoz